# arcee-python

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tasks.py
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: publish.yml  test.yml
arcee/: __init__.py  api.py  api_handler.py  api_helpers.py  cli.py  cli_handler.py  config.py  dalm.py  py.typed  retriever.py
arcee/cli/: app.py  errors.py  typer.py
arcee/cli/commands/: cpt.py  merging.py  retriever.py  sft.py
arcee/cli/handlers/: upload.py  weights.py
arcee/data/: __init__.py  context.py  generate.py  instruction_set.py  prompt_set.py
arcee/datasets/: stripe_api.csv
arcee/models/: __init__.py  cohere_lm.py  huggingface.py  lm.py
arcee/schemas/: doc.py  routes.py
datasets/: stripe_api.csv  stripe_api_generated.csv
notebooks/: model_alignment.ipynb  model_alignment_dpo.ipynb  model_cli.ipynb  model_deployment.ipynb  model_merging.ipynb  model_pretraining.ipynb
tests/: test_api_handler.py
