[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"


[project]
name = "arcee-py"
authors = [{name = "Jacob Solowetz", email = "jacob@arcee.ai"}, {name = "Ben Epstein", email = "ben@arcee.ai"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dynamic = ["version", "description"]
packages = [
     { include = "arcee" }
 ]
dependencies = [
    "requests",
    "typer",
    "rich",
    "pydantic>=2.4.2,<3.0",
    "StrEnum"
]

[tool.hatch.build.targets.wheel]
packages = ["arcee"]

[tool.hatch.version]
path = "arcee/__init__.py"


[project.optional-dependencies]
dev = [
    "black",
    "invoke",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "ruff",
    "types-requests",
    "pandas",
    "pandas-stubs"
]
cli = [
    "pandas"
]

[project.urls]
Home = "https://arcee.ai"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py311"
respect-gitignore = true
line-length = 120
# Pyflakes, bugbear, pycodestyle, pycodestyle warnings, isort
select=["TID252", "B", "F", "E", "W", "I001"]

[tool.ruff.isort]
case-sensitive = true
order-by-type = true
known-first-party = ["dalm"]


[tool.pytest.ini_options]
timeout = 180
addopts = [
    "-o",
    "console_output_style=progress",
    "--disable-warnings",
    "--cov=arcee",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--durations=10",
]
env = [
    "ARCEE_API_KEY = FOOBAR",
]


[tool.ruff.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.mypy]
disallow_untyped_defs = true
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = "retrying.*"
ignore_missing_imports = true